--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 </section>
                 <picture >
                     <source media="(max-width:600px )" srcset="android.png">
-                    <img src="1718a076e29822051df8bcf8b5ce1124-logotipo-android (1).png" alt="android">
+                    <img src="./imagens/1718a076e29822051df8bcf8b5ce1124-logotipo-android (1).png" alt="android">
                 </picture>
                 <h2>E BLABLABLA</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ullam quo, deserunt asperiores provident sed fugiat quas dolore ipsa voluptas doloremque! Vero corporis reprehenderit veritatis modi vitae magnam odit id.lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe sit commodi temporibus corrupti beatae eligendi molestias? Possimus ullam quia atque architecto distinctio. Laboriosam ipsum quia similique ratione temporibus, facilis expedita.</p>
                 <picture>
                     <source media="(max-width:600px )" srcset="imagemandroid.webp">
-                    <img src="android-logo-0.png" alt="androidpng2">
+                    <img src="./imagens/android-logo-0.png" alt="androidpng2">
                     <section id="video">
                 </picture>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, praesentium labore. Amet reiciendis consequatur unde quidem. Perspiciatis, quae, explicabo natus ducimus corrupti sit voluptate nesciunt asperiores porro rem velit mollitia! Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quia delectus atque possimus laboriosam corporis animi eveniet facilis at cupiditate, dicta perspiciatis, commodi molestiae officiis dolorem fuga quam deleniti nobis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis doloribus deserunt provident expedita eveniet ullam aliquam magnam vitae praesentium voluptate assumenda, dignissimos nemo fugiat molestias, voluptatem ut enim nihil dolorem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quidem nemo perspiciatis, non assumenda corrupti eos! Optio velit quod maxime mollitia porro doloremque voluptatem nihil odio commodi hic. Itaque, ea.</p>
