--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     <p>Lorem ipsum dolor sit amet <a  target="_blank" rel="external"   class="youtube" href="https://www.youtube.com/watch?v=xS2D9x8odoE&list=PLHz_AreHm4dlUpEXkY1AyVLQGcpSgVF8s&index=30">youtube🔗</a>consectetur adipisicing elit. Laboriosam ducimus vitae eveniet nostrum ratione omnis labore fugiat, quos cum cumque quo libero suscipit. Iusto nam perspiciatis maiores qui voluptatibus omnis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias, soluta eaque. Aspernatur nihil, neque veritatis aliquid impedit doloribus similique unde natus delectus, sapiente iste ipsa. Sunt voluptatem autem debitis nisi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum eveniet quod dolor distinctio expedita cum animi, nobis autem, soluta placeat eaque, rem quos ipsa minus accusantium qui modi architecto! Mollitia?</p>
                 </section>
                 <picture >
-                    <source media="(max-width:600px )" srcset="android.png">
+                    <source media="(max-width:600px )" srcset="./imagens/android.png">
                     <img src="./imagens/1718a076e29822051df8bcf8b5ce1124-logotipo-android (1).png" alt="android">
                 </picture>
                 <h2>E BLABLABLA</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, ullam quo, deserunt asperiores provident sed fugiat quas dolore ipsa voluptas doloremque! Vero corporis reprehenderit veritatis modi vitae magnam odit id.lorem Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe sit commodi temporibus corrupti beatae eligendi molestias? Possimus ullam quia atque architecto distinctio. Laboriosam ipsum quia similique ratione temporibus, facilis expedita.</p>
                 <picture>
-                    <source media="(max-width:600px )" srcset="imagemandroid.webp">
+                    <source media="(max-width:600px )" srcset="./imagens/imagemandroid.webp">
                     <img src="./imagens/android-logo-0.png" alt="androidpng2">
                     <section id="video">
                 </picture>
